--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,6 @@ strong {
     color: white;
     justify-content: space-between; /* distribui o espaço horizontalmente */
     gap: 10px;
-    min-height: 100%;
 }
 
 .textoELinks {
@@ -96,8 +95,6 @@ strong {
 
 .footer {
     background-color: #22D4FD;
-    position: relative;
-    bottom: 0;
     width: 100%;
 }
 
@@ -121,6 +118,6 @@ strong {
 
     .todoConteudo {
         flex-direction: column-reverse;
-        padding: 3% 3%;
+        padding: 3% 3% 20% 3%;
     }
 }
