update footer text

--- a/styles/style.css
+++ b/styles/style.css
@@ -103,7 +103,7 @@ strong {
 
 .textoFooter {
     text-align: center;
-    padding: 1%;
+    padding: 2%;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
 }
@@ -125,6 +125,6 @@ strong {
     }
 
     .footer {
-        font-size: 10px;
+        font-size: 0.75rem;
     }
 }
