Revert "alterando posições"
This reverts commit 22c76950ba5c0d29d978ae6c63f63e0e59b74399.

--- a/styles/style.css
+++ b/styles/style.css
@@ -64,13 +64,6 @@ strong {
     width: 45%;
 }
 
-.acesseRedes {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.1rem;
-    font-weight: 100;
-}
-
-
 .links {
     display: flex;
     flex-direction: column;
@@ -79,24 +72,23 @@ strong {
 }
 
 .links_links {
-    display: flex;
     border-radius: 5px;
     border: 1px solid #22D4FD;
-    padding: 2% 15%;
+    padding: 2% 15% 2% 15%; /* top, right, bottom, left */
     margin: 2%;
     font-family: 'Montserrat', sans-serif;
     font-size: 0.80rem;
     color: #F6F6F6;
     font-weight: 500;
     width: 4rem;
-    justify-content: center;
+    text-align: center;
 }
 
-.iconesSociais {
-    padding-right: 7%;
-    width: 25%;
+.acesseRedes {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 100;
 }
-
 
 .links_links:hover {
     background-color: rgb(19, 19, 19);
@@ -119,8 +111,6 @@ strong {
 @media (max-width: 1200px) {
     .minhaFoto {
         width: 40%;
-        position: relative;
-        bottom: 3rem;
     }
 
     .nav {
@@ -130,22 +120,11 @@ strong {
     }
 
     .todoConteudo {
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         padding: 3% 3% 80% 3%;
     }
 
     .footer {
         font-size: 10px;
-    }
-
-    .textoELinks {
-        position: relative;
-        top: 1.9rem;
-    }
-
-    .links {
-        position: relative;
-        top: 1.8rem;
-        right: 6rem;
     }
 }
